--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .header {
     width:100%;
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("/images/sonu777.jpg");
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu777.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     clip-path: polygon(100% 0% ,100% 85% ,50% 100%,0 85%,0 0);
