Add more devices for responsive
small devices

--- a/style.css
+++ b/style.css
@@ -591,23 +591,50 @@ padding: 30px 0px;
     }
     
     .header {
-        width:100%;
-        height: 100vh;
+        
         background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu777.jpg");
         background-size: 130% 100%;
-        background-repeat: no-repeat;
-        clip-path: polygon(100% 0% ,100% 85% ,50% 100%,0 85%,0 0);
-        position: relative;
-        background-attachment: fixed;
+       
     } 
 
 
 }
 
+@media only screen and (max-width: 388px)  {
+
+    #h1-hello {
+        font-size:50px;
+        margin-right: 190px !important;
+    }
+  
+
+    .header-buttons {
+        display: inline-flex;
+        margin-left: 0px;
+    }
+    
+    .header-section h2 {
+        font-size: 60px;
+    }
+
+    .header {
+        
+        background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("https://raw.githubusercontent.com/sonu3323/sonu.github.io/master/images/sonu777.jpg");
+        background-size: 130% 100%;
+       
+    } 
 
 
+}
 
+@media only screen and (max-width: 400px) {
+    #h1-hello {
+        font-size:40px;
+        margin-right: 190px !important;
+    }
+  
 
+}  
 
 
 
